[package]
name = "rust_coin"
version = "0.1.0"
authors = ["mrblack"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"

[lib]
name = "rustcoinlib"
path = "src/lib.rs"

[[bin]]
name = "rust_coin"
path = "src/main.rs"
